@@ -1,5 +1,10 @@
 2020-03-25  Martin Liska  <mliska@suse.cz>
 
+	PR lto/94249
+	* plugin-api.h: Add more robust endianess detection.
+
+2020-03-25  Martin Liska  <mliska@suse.cz>
+
 	* plugin-api.h (enum ld_plugin_symbol_type): Remove
 	comma after last value of an enum.
 	* lto-symtab.h (enum gcc_plugin_symbol_type): Likewise.
